--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1595,14 +1595,31 @@ figure {
 /*! Modified from http://responsiveslides.com v1.32 by @viljamis */
 
 .rslides {
-  margin: 0 auto;
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
   padding: 0;
+  margin: 0;
   li {
-    margin-bottom: 0;
+    position: absolute;
+    display: none;
+    width: 100%;
+	margin:0;
+    left: 0;
+    top: 0;
+    &:first-child {
+      position: relative;
+      display: block;
+      float: left;
+    }
   }
   img {
-    width: 100%;
+    display: block;
     height: auto;
+    float: left;
+    width: 100%;
+    border: 0;
   }
 }
 
