--- a/templates/contact.html
+++ b/templates/contact.html
@@ -71,15 +71,15 @@ will help you write and rewrite the SCSS files.
 	    <h1><img src="http://placehold.it/250x100&text=[Contact Logo]"></h1>
 	  </div>
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
-	  <div class="menu-button"></div>
+	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav">
+	  <nav role="navigation" id="nav" class="toggle">
 	    <ul>
-		  <li class="top-level"><a href="#">Link 1</a></li>
-		  <li class="top-level"><a href="#">Link 2</a></li>
-		  <li class="top-level"><a href="#">Link 3</a></li>
-		  <li class="top-level"><a href="#">Link 4</a></li>
-		  <li class="top-level"><a href="#">Link 5</a></li>
+		  <li class="top-level"><a href="">Link 1</a></li>
+		  <li class="top-level"><a href="">Link 2</a></li>
+		  <li class="top-level"><a href="">Link 3</a></li>
+		  <li class="top-level"><a href="">Link 4</a></li>
+		  <li class="top-level"><a href="">Link 5</a></li>
 	    </ul>	
       </nav>
 	<!-- End Of Navigation -->
