--- a/css/layout.css
+++ b/css/layout.css
@@ -33,14 +33,15 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 --------------------------------------------------*/
 header[role="banner"] {
   width: 100%;
-  position: relative;
-  overflow: hidden; }
+  position: relative; }
 
 .logo {
-  float: left;
   position: relative;
   width: auto;
   margin: 0 auto; }
+
+.menu-button {
+  width: 100%; }
 
 /* #Media Queries
 ================================================== */
@@ -49,7 +50,6 @@ header[role="banner"] {
 @media only screen and (min-width: 40em) {
   /* 640 =================================================== */
   .logo {
-    float: left;
     width: auto; }
     .logo h1 {
       text-align: left; } }
@@ -58,7 +58,12 @@ header[role="banner"] {
 @media screen and (min-width: 55.5em) {
   /* 888 =================================================== */ }
 @media only screen and (min-width: 61.5em) {
-  /* 984 =================================================== */ }
+  /* 984 =================================================== */
+  .logo {
+    float: left; }
+
+  nav {
+    float: right; } }
 @media only screen and (min-width: 75em) {
   /* 1200 =================================================== */ }
 @media only screen and (min-width: 87em) {
