--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,7 +1,7 @@
 /* ============================================================
 Wirefy 
 Author: Chris Da Sie [http://chrisdasie.com]
-Version: 2.0.6
+Version: 2.0.7
 URL:https://github.com/cjdsie/wirefy
 Apache License:v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Table of Content
@@ -1595,14 +1595,31 @@ figure {
 /*! Modified from http://responsiveslides.com v1.32 by @viljamis */
 
 .rslides {
-  margin: 0 auto;
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
   padding: 0;
+  margin: 0;
   li {
-    margin-bottom: 0;
+    position: absolute;
+    display: none;
+    width: 100%;
+	margin:0;
+    left: 0;
+    top: 0;
+    &:first-child {
+      position: relative;
+      display: block;
+      float: left;
+    }
   }
   img {
-    width: 100%;
+    display: block;
     height: auto;
+    float: left;
+    width: 100%;
+    border: 0;
   }
 }
 
@@ -1799,32 +1816,28 @@ a.skip {
   left: -999em;
 }
 
-[role='navigation'] {
+.toggle {
   margin: 0 auto;
   width: 100%;
   background-color: #333;
-  float: right;
 }
 
-.flexNav-touch [role='navigation'], .flexNav-no-touch [role='navigation'] {
+.flexNav-touch .toggle, .flexNav-no-touch .toggle {
   display: none;
 }
 
 .menu-button {
-  float: right;
   display: block;
-  width: 1.5625em;
-  height: 1.5625em;
-  padding: 1em 0;
-  background: transparent;
-  color: #333;
+  padding: 1em;
+  background: #fff;
+  color: #222;
   background-image: url('../img/nav-icon.png');
   background-repeat: no-repeat;
-  background-position: 93% .625em;
+  background-position: 93% 10px;
   cursor: pointer;
 }
 
-[role='navigation'] {
+.toggle {
   &:after {
     /* clearfix */
     visibility: hidden;
@@ -1834,25 +1847,17 @@ a.skip {
     clear: both;
     height: 0;
   }
-  ul {
-    padding: 0;
-    display: block;
-    margin-bottom: 0;
-  }
   li {
     position: relative;
     list-style: none;
     display: block;
     background-color: #333;
     width: 100%;
-    &:last-of-type {
-      margin-bottom: 0;
-    }
     &.item-with-ul {
       background-color: #222;
     }
     a {
-      /*margin-right:20%;*/
+      margin-right: 20%;
       display: block;
       color: #ddd;
       border-bottom: 1px solid #111;
@@ -1865,27 +1870,29 @@ a.skip {
     position: relative;
     display: block;
     background-color: #333;
-    padding: .5em 1em 1.4em 1em;
+    padding: 1em;
     z-index: 2;
   }
   li ul {
     width: 100%;
+    position: relative;
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+ 	margin:0 0 .3125em 1.1875em;
     li {
       float: none;
       width: 100%;
+	  margin:0;
       a {
         display: block;
         background-color: #333;
       }
     }
-    position: relative;
-    border-top: 1px solid #333;
-    border-bottom: 1px solid #333;
   }
   .item-with-ul {
-    background-image: url('../images/arrow-down.png');
+    background-image: url('../img/arrow-down.png');
     background-repeat: no-repeat;
-    background-position: 93% 1.125em;
+    background-position: 93% 18px;
   }
 }
 
@@ -3266,7 +3273,7 @@ legend + .control-group {
 ================================================== */
 /* @media screen and (min-width:480px) */
 @media screen and (min-width: 30em) {
-  [role='navigation'] {
+  .toggle {
     float: left;
   }
 }
@@ -3380,73 +3387,72 @@ legend + .control-group {
 
 /* @media screen and (min-width:71.25em) */
 @media screen and (min-width: 45em) {
-  .flexNav-touch [role='navigation'], .flexNav-no-touch [role='navigation'] {
-    display: block!important;
-  }
-  [role='navigation'] {
-    float: right;
-    display: block;
-    position: relative;
-    width: auto;
-    background: none;
-    z-index: 0;
-  }
-  .menu-button {
-    display: none;
-  }
-  [role='navigation'] li {
-    position: relative;
-    list-style: none;
-    float: left;
-    display: block;
-    background: none;
-    color: #333;
-    width: auto;
-    padding: 0 0 0 1.25em;
-    margin: 0em;
-    text-transform: normal;
-  }
-  .flexNav-no-touch .item-with-ul:hover > ul {
-    opacity: 1;
-    top: 3.1em;
-    position: absolute;
-  }
-  [role="navigation"] .top-level a {
-    background: none;
-    color: #333;
-    padding: 0;
-  }
-  [role='navigation'] li a {
-    border-left: none;
-    border-bottom: none;
-  }
-  .flexNav-no-touch [role='navigation'] li ul {
-    position: absolute;
-    top: auto;
-    left: 0;
-    opacity: 0;
-    visibility: hidden;
-    height: 1px;
-    z-index: 1;
-  }
-  [role='navigation'] li ul li a {
-    border-bottom: none;
-  }
-  .flexNav-touch [role='navigation'] li ul.sub-menu {
-    position: absolute;
-    top: auto;
-    left: 0;
-    display: none;
-    z-index: 1;
-  }
-  .flexNav-no-touch .item-with-ul:hover > ul {
-    visibility: visible;
-    opacity: 1;
-    height: auto;
-    display: block;
-    border-right: 1px solid #000;
-    border-bottom: 1px solid #000;
-  }
+
+.flexNav-touch .toggle, .flexNav-no-touch .toggle {
+  display: block;
+  float: right;
+}
+
+.menu-button {
+  display: none;
+}
+
+.toggle ul{
+display:block;
+}
+
+.toggle li {
+  position: relative;
+  list-style: none;
+  float: left;
+  display: block;
+  background-color: #333;
+  width: 20%;
+  margin-bottom:0;
+}
+
+.flexNav-no-touch .item-with-ul:hover > ul {
+  opacity: 1;
+  top: 3.1em;
+  position: absolute;
+}
+
+.toggle li a {
+  border-left: 1px solid #000;
+  border-bottom: none;
+}
+
+.flexNav-no-touch .toggle li ul {
+  position: absolute;
+  top: auto;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  height: 1px;
+  z-index: 1;
+}
+
+.toggle li ul li a {
+  border-bottom: none;
+}
+
+.flexNav-touch .toggle li ul.sub-menu {
+  position: absolute;
+  top: auto;
+  left: 0;
+  display: none;
+  z-index: 1;
+}
+
+.flexNav-no-touch .item-with-ul:hover > ul {
+  visibility: visible;
+  opacity: 1;
+  height: auto;
+  display: block;
+  border-right: 1px solid #000;
+  border-bottom: 1px solid #000;
+}
+
 }
 
 /* @media screen and (min-width:888px) */
