--- a/templates/blog.html
+++ b/templates/blog.html
@@ -67,20 +67,19 @@ will help you write and rewrite the SCSS files.
   <div class="container clearfix">
 	
   <!-- This is the header information. You can add things like logos and navigation here. -->
-    <header role="banner" class="clearfix">
+    <header role="banner" class="row">
 	  <div class="logo">
 	    <h1><img src="http://placehold.it/250x100&text=[Blog Logo]"></h1>
 	  </div>
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
-	  <div class="menu-button"></div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav">
+	  <nav role="navigation" id="nav" class="menu2 five columns">
 	    <ul>
-		  <li class="top-level"><a href="#">Link 1</a></li>
-		  <li class="top-level"><a href="#">Link 2</a></li>
-		  <li class="top-level"><a href="#">Link 3</a></li>
-		  <li class="top-level"><a href="#">Link 4</a></li>
-		  <li class="top-level"><a href="#">Link 5</a></li>
+		  <li class="top-level"><a href="">Link 1</a></li>
+		  <li class="top-level"><a href="">Link 2</a></li>
+		  <li class="top-level"><a href="">Link 3</a></li>
+		  <li class="top-level"><a href="">Link 4</a></li>
+		  <li class="top-level"><a href="">Link 5</a></li>
 	    </ul>	
       </nav>
 	<!-- End Of Navigation -->
