--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -66,20 +66,20 @@ will help you write and rewrite the SCSS files.
   <div class="container clearfix">
 	
   <!-- This is the header information. You can add things like logos and navigation here. -->
-    <header role="banner" class="clearfix">
+    <header role="banner" class="row">
 	  <div class="logo">
 	    <h1><img src="http://placehold.it/250x100&text=[Gallery Logo]"></h1>
 	  </div>
 	<!-- Navigation. This navigation uses the four line approach for small viewports. Check documentation for other examples -->
-	  <div class="menu-button"></div>
+	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav">
+	  <nav role="navigation" id="nav" class="toggle sixteen columns">
 	    <ul>
-		  <li class="top-level"><a href="#">Link 1</a></li>
-		  <li class="top-level"><a href="#">Link 2</a></li>
-		  <li class="top-level"><a href="#">Link 3</a></li>
-		  <li class="top-level"><a href="#">Link 4</a></li>
-		  <li class="top-level"><a href="#">Link 5</a></li>
+		  <li class="top-level"><a href="">Link 1</a></li>
+		  <li class="top-level"><a href="">Link 2</a></li>
+		  <li class="top-level"><a href="">Link 3</a></li>
+		  <li class="top-level"><a href="">Link 4</a></li>
+		  <li class="top-level"><a href="">Link 5</a></li>
 	    </ul>	
       </nav>
 	<!-- End Of Navigation -->
@@ -91,9 +91,9 @@ will help you write and rewrite the SCSS files.
  	  <section class="row" role="content">
 		<div class="rslides_container">
  	      <ul class="rslides" id="slider1">
- 	        <li><img src="http://placehold.it/1200x450&text=[img1]" alt="" /></li>
- 	        <li><img src="http://placehold.it/1200x450&text=[img2]" alt="" /></li>
- 	        <li><img src="http://placehold.it/1200x450&text=[img3]" alt="" /></li>
+ 	        <li><img src="http://placehold.it/1600x450&text=[img1]" alt="" /></li>
+ 	        <li><img src="http://placehold.it/1600x450&text=[img2]" alt="" /></li>
+ 	        <li><img src="http://placehold.it/1600x450&text=[img3]" alt="" /></li>
  	      </ul> 
 		</div>
 		<!-- Gallery Thumbbnails -->
