--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -72,15 +72,15 @@ will help you write and rewrite the SCSS files.
 	    <h1><img src="http://placehold.it/250x100&text=[Introduction Logo]"></h1>
 	  </div>
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
-	  <div class="menu-button"></div>
+	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav" class="six columns">
+	  <nav role="navigation" id="nav" class="toggle eight columns">
 	    <ul>
-		  <li class="top-level"><a href="#">Link 1</a></li>
-		  <li class="top-level"><a href="#">Link 2</a></li>
-		  <li class="top-level"><a href="#">Link 3</a></li>
-		  <li class="top-level"><a href="#">Link 4</a></li>
-		  <li class="top-level"><a href="#">Link 5</a></li>
+		  <li class="top-level"><a href="">Link 1</a></li>
+		  <li class="top-level"><a href="">Link 2</a></li>
+		  <li class="top-level"><a href="">Link 3</a></li>
+		  <li class="top-level"><a href="">Link 4</a></li>
+		  <li class="top-level"><a href="">Link 5</a></li>
 	    </ul>	
       </nav>
 	<!-- End Of Navigation -->
@@ -94,9 +94,9 @@ will help you write and rewrite the SCSS files.
 		
 			<div class="rslides_container">
 	 	      <ul class="rslides" id="slider3">
-	 	        <li><img src="http://placehold.it/1200x450&text=[img1]" alt="" /></li>
-	 	        <li><img src="http://placehold.it/1200x450&text=[img2]" alt="" /></li>
-	 	        <li><img src="http://placehold.it/1200x450&text=[img3]" alt="" /></li>
+	 	        <li><img src="http://placehold.it/1600x450&text=[img1]" alt="" /></li>
+	 	        <li><img src="http://placehold.it/1600x450&text=[img2]" alt="" /></li>
+	 	        <li><img src="http://placehold.it/1600x450&text=[img3]" alt="" /></li>
 	 	      </ul> 
 			</div>
 			
