--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -74,13 +74,13 @@ will help you write and rewrite the SCSS files.
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
 	  <div class="menu-button"></div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav">
-	    <ul>
-		  <li class="top-level"><a href="#">Link 1</a></li>
-		  <li class="top-level"><a href="#">Link 2</a></li>
-		  <li class="top-level"><a href="#">Link 3</a></li>
-		  <li class="top-level"><a href="#">Link 4</a></li>
-		  <li class="top-level"><a href="#">Link 5</a></li>
+	  <nav role="navigation" id="nav" class="toggle nine columns">
+	    <ul>                             
+		  <li class="top-level"><a href="">Link 1</a></li>
+		  <li class="top-level"><a href="">Link 2</a></li>
+		  <li class="top-level"><a href="">Link 3</a></li>
+		  <li class="top-level"><a href="">Link 4</a></li>
+		  <li class="top-level"><a href="">Link 5</a></li>
 	    </ul>	
       </nav>
 	<!-- End Of Navigation -->
