Cleaned up file structure

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1831,7 +1831,7 @@ a.skip {
   padding: 1em;
   background: #fff;
   color: #222;
-  background-image: url('../img/nav-icon.png');
+  background-image: url('../img/menu/nav-icon.png');
   background-repeat: no-repeat;
   background-position: 93% 10px;
   cursor: pointer;
@@ -1890,7 +1890,7 @@ a.skip {
     }
   }
   .item-with-ul {
-    background-image: url('../img/arrow-down.png');
+    background-image: url('../img/menu/arrow-down.png');
     background-repeat: no-repeat;
     background-position: 93% 18px;
   }
