--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -40,13 +40,12 @@ will help you write and rewrite the SCSS files.
  <link rel="stylesheet" href="../css/base.css" media="screen"> <!-- Compressed and compiled from base.scss -->
  <link rel="stylesheet" href="../css/layout.css" media="screen"> <!-- Compiled from layout.scss -->
  
- <script src="js/modernizr.js"></script>
+ <script src="js/vendor/modernizr.js"></script>
  
  <!-- Browser Specific Javascript
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
- <script src="js/selectivizr-min.js"></script>
- <script src="js/css3-mediaqueries.js"></script>
+ <script src="js/vendor/selectivizr-min.js"></script>
  <![endif]-->
 
 
@@ -149,7 +148,7 @@ will help you write and rewrite the SCSS files.
   <!-- JS - Add or remove any of the scripts to suit the functionality you wish to display. 
   ================================================== -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="../js/jquery-1.8.2.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="../js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
   <script src="../js/plugins.js"></script>
   <script src="../js/script.js"></script>
   <script src="../js/helper.js"></script>
