Added Chrome Frame

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -21,6 +21,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <!-- Basic Page Needs
 ================================================= -->
  <meta charset="utf-8">
+ <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
  <title>Wirefy | Sidebar Template</title>
  <meta name="description" content=""><!-- Why don't we add a brief decription here -->
  <meta name="author" content=""><!-- Are you the creator? Put your name here -->
@@ -63,6 +64,7 @@ will help you write and rewrite the SCSS files.
 
 </head>
 <body>
+	<!-- Add your site or application content here -->
   <div class="container clearfix">
 	
   <!-- This is the header information. You can add things like logos and navigation here. -->
