Index files cleaned up; Menu classes given better naming convention

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -74,7 +74,7 @@ will help you write and rewrite the SCSS files.
 	  </div>
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav" class="menu2 five columns">
+	  <nav role="navigation" id="nav" class="stacked five columns">
 	    <ul>
 		  <li class="top-level"><a href="">Link 1</a></li>
 		  <li class="top-level"><a href="">Link 2</a></li>
