--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,7 +1,7 @@
 /* ============================================================
 Wirefy 
 Author: Chris Da Sie [http://chrisdasie.com]
-Version: 2.0.7
+Version: 2.0.8
 URL:https://github.com/cjdsie/wirefy
 Apache License:v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Table of Content
@@ -1759,7 +1759,7 @@ video{
 /* #Menus
 ================================================== */
 
-.menu1 {
+.collapse {
   float: left;
   width: 100%;
   ul {
@@ -1777,7 +1777,7 @@ video{
   }
 }
 
-.menu2 {
+.stacked {
   width: 100%;
   float: left;
   margin-bottom: 1em;
@@ -3347,7 +3347,7 @@ legend + .control-group {
   .sixteen {
     width: 100%;
   }
-  .menu2 {
+  .stacked {
     li:first-child {
       margin-left: 0;
     }
@@ -3457,7 +3457,7 @@ display:block;
 
 /* @media screen and (min-width:888px) */
 @media screen and (min-width: 55.5em) {
-  .menu2 {
+  .stacked {
     float: right;
     clear: none;
   }
