--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -75,7 +75,7 @@ will help you write and rewrite the SCSS files.
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
 	  <div class="menu-button">Menu</div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav" class="toggle eight columns">
+	  <nav role="navigation" id="nav" class="toggle ten columns">
 	    <ul>
 		  <li class="top-level"><a href="">Link 1</a></li>
 		  <li class="top-level"><a href="">Link 2</a></li>
