--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,7 +1,7 @@
 /* ============================================================
 Wirefy 
 Author: Chris Da Sie [http://chrisdasie.com]
-Version: 2.0.9
+Version: 2.1
 URL:https://github.com/cjdsie/wirefy
 Apache License:v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Table of Content
@@ -185,7 +185,12 @@ object, embed, video, iframe, picture {
 }
 }
 
-/* IE7 */
+/* IE10 Touch Browsing Default */
+
+canvas {
+    -ms-touch-action: double-tap-zoom;
+}
+
 /* #Basic Styles
 ================================================== */
 /* apply a natural box layout model to all elements */
