Font sizing fixes

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -212,9 +212,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: "HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 10px;
-  font-size: .625em;
-  font-size: 1rem;
+  font-size: 16px;
+  font-size: 1em;
+  font-size: 1.6rem;
   line-height: 1.5em;
   color: #444;
   -webkit-font-smoothing: antialiased;
