--- a/templates/blog.html
+++ b/templates/blog.html
@@ -38,7 +38,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  or overwrites should be used in the layout.css. We have now added support for SASS. Using CodeKit or a similar preprocessor
 will help you write and rewrite the SCSS files.  
 ================================================= -->
- <link rel="stylesheet" href="../css/base.css" media="screen"> <!-- Compressed and compiled from base.scss -->
  <link rel="stylesheet" href="../css/layout.css" media="screen"> <!-- Compiled from layout.scss -->
  
  <script src="js/vendor/modernizr.js"></script>
@@ -74,7 +73,7 @@ will help you write and rewrite the SCSS files.
 	  </div>
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav" class="stacked five columns">
+	  <nav role="navigation" id="nav" class="stacked six columns">
 	    <ul>
 		  <li class="top-level"><a href="">Link 1</a></li>
 		  <li class="top-level"><a href="">Link 2</a></li>
@@ -143,13 +142,12 @@ will help you write and rewrite the SCSS files.
 	  <!-- End Main Content and Sidebar -->
 
    	</div><!-- End Of Content -->
-	<!-- Footer -->
-		
 
+      <!-- Footer -->
 	  <hr>			
       <footer role="contentinfo" class="row">
-	 	<p class="eleven columns">&copy; Copyright Blog Template Wirefy.</p>
-		<div class="five columns">
+	 	<p class="ten columns">&copy; Copyright Blog Template Wirefy.</p>
+		<div class="six columns">
 			<ul class="link-list">
 			  <li><a href="#">Link 1</a></li>
 			  <li><a href="#">Link 2</a></li>
