--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -38,7 +38,6 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  or overwrites should be used in the layout.css. We have now added support for SASS. Using CodeKit or a similar preprocessor
 will help you write and rewrite the SCSS files.  
 ================================================= -->
- <link rel="stylesheet" href="../css/base.css" media="screen"> <!-- Compressed and compiled from base.scss -->
  <link rel="stylesheet" href="../css/layout.css" media="screen"> <!-- Compiled from layout.scss -->
  
  <script src="js/vendor/modernizr.js"></script>
@@ -142,7 +141,7 @@ will help you write and rewrite the SCSS files.
 				<section class="ten columns">
 					<div class="callout row">
 						<div class="six columns">
-							<h1>Callout Header</h1>
+							<h3>Callout Header</h3>
 							<h4>I'm a callout subtitle or description text</h4>
 						</div>
 						<div class="nine columns alt-spacing">
@@ -155,7 +154,7 @@ will help you write and rewrite the SCSS files.
 	  		<!-- Get In Touch -->
 	
 				<section class="six columns">
-					<h1>Get in Touch</h1>
+					<h2>Get in Touch</h2>
 					<hr>
 					<a href="#" class="button large row">Call To Action</a>
 					<a href="#" class="button large row">Call To Action</a>
@@ -171,8 +170,8 @@ will help you write and rewrite the SCSS files.
 	<!-- Footer -->
 	  <hr>			
       <footer role="contentinfo" class="row">
-	 	<p class="eleven columns">&copy; Copyright Sidebar Template Wirefy.</p>
-		<div class="five columns">
+	 	<p class="ten columns">&copy; Copyright Introduction Template Wirefy.</p>
+		<div class="six columns">
 			<ul class="link-list">
 			  <li><a href="#">Link 1</a></li>
 			  <li><a href="#">Link 2</a></li>
