--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,10 +1,15 @@
 /* ============================================================
 
 Wirefy by Chris Da Sie
-Version: 2.0.6
+Version: 2.0.7
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
+
+/* Import Base partial **Important Do Not Delete**
+==================================================*/
+
+@import "base";
 
 /* Table of Content
 ==================================================
@@ -54,6 +59,7 @@ header[role="banner"] {
 
 /* #Media Queries
 ================================================== */
+
 
 @media only screen and (min-width: 30em) {
   /* 480 =================================================== */
