CSS animations and IE styles

--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -46,6 +46,8 @@ will help you write and rewrite the SCSS files.
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
+ <link rel="stylesheet" href="css/base-ie.css">
+ <link rel="stylesheet" href="css/layout-ie.css">
  <![endif]-->
 
 
