--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,40 +1,29 @@
 /* ============================================================
 
 Wirefy by Chris Da Sie
-Version: 2.0.7
+Version: 3.0.0
 URL: https://github.com/cjdsie/wirefy
 Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
-
 
 /* Import Base partial **Important Do Not Delete**
 ==================================================*/
 
-@import "base";
+@import "normalize", "mixins", "typography", "grid", "helpers/color-palette", "components/menu", "components/slideshow", "components/breadcrumbs", "components/pagination", "components/pager", "components/buttons", "components/tabs", "base", "transitions", "animations";
+
+/* Animations is completely optional and can be removed if not needed */
 
 /* Table of Content
 ==================================================
-	#Site Styles
-	#Page Styles
-	#Media Queries
+	1.0 Site Styles
+	2.0 Page Styles
+	  2.1 Header
+	  2.2 Main Content
+	  2.3 Footer
 	*/
 
 /* #Site Styles
 ================================================== */
 
-.container {
-  margin: 0 auto;
-  padding: 0;
-  max-width: 100%;
-  width: 80%;
-  padding-top: 2%;
-}
-
-.content {
-  position: relative;
-  width: 100%;
-  margin-top: 5%;
-
-}
 
 /* #Page Styles
 ================================================== */
@@ -42,65 +31,8 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Header 
 --------------------------------------------------*/
 
-header[role="banner"] {
-  width: 100%;
-  position: relative;
-}
+/* Main Content 
+--------------------------------------------------*/
 
-.logo {
-  position: relative;
-  width: auto;
-  margin: 0 auto;
-}
-
-.menu-button{
-	width:100%;
-}
-
-/* #Media Queries
-================================================== */
-
-
-@media only screen and (min-width: 30em) {
-  /* 480 =================================================== */
-}
-
-@media only screen and (min-width: 40em) {
-  /* 640 =================================================== */
-  .logo {
-    width: auto;
-    h1 {
-      text-align: left;
-    }
-  }
-}
-
-@media only screen and (min-width: 45em) {
-  /* 720 =================================================== */
-}
-
-@media screen and (min-width: 55.5em) {
-  /* 888 =================================================== */
-}
-
-@media only screen and (min-width: 61.5em) {
-  /* 984 =================================================== */
-  .logo {
-	float:left;
-	}
-	nav{
-	float:right;
-	}
-}
-
-@media only screen and (min-width: 75em) {
-  /* 1200 =================================================== */
-}
-
-@media only screen and (min-width: 87em) {
-  /* 1392 =================================================== */
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* 2x =================================================== */
-}
+/* Footer 
+--------------------------------------------------*/
