--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -125,7 +125,7 @@
   float: right;
   text-indent: -9999px;
   overflow: hidden;
-  background: #f4421a url("../menu/hamburger.png") no-repeat 50% 33%;
+  background: #f4421a url("../img/menu/hamburger.png") no-repeat 50% 33%;
 }
 
 
