--- a/sass/wirefy.scss
+++ b/sass/wirefy.scss
@@ -3,7 +3,7 @@
 Wirefy by Chris Da Sie
 Version: 3.0.1
 URL: https://github.com/cjdsie/wirefy
-Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
+MIT License
 
 /* Import Base partial **Important Do Not Delete**
 ==================================================*/
