--- a/_includes/main-navigation.html
+++ b/_includes/main-navigation.html
@@ -11,32 +11,38 @@
   <nav role="navigation" class="nav-collapse">
     <ul class="nav" id="nav">
       <li> 
-        <a href="/grid.html"> 
+        <a href="/grid.html">
+	      <span class="icon-insert-template"></span> 
           <span class="nav-label">Grid System</span>
         </a>
       </li>
       <li> 
-        <a href="/typography.html"> 
+        <a href="/typography.html">
+	      <span class="icon-text-width"></span>  
           <span class="nav-label">Typography</span>
         </a>
       </li>
       <li>
 	    <a href="/lists.html"> 
+		  <span class="icon-list2"></span>
           <span class="nav-label">Lists</span>
         </a>
       </li>
       <li>
 	    <a href="/ui-elements.html"> 
+		  <span class="icon-cogs"></span>
           <span class="nav-label">UI Elements</span>
         </a> 
       </li>
       <li>
-	    <a href="/forms.html"> 
+	    <a href="/forms.html">
+		  <span class="icon-console"></span> 
           <span class="nav-label">Forms</span>
         </a>
       </li>
       <li>
-	    <a href="/tables.html"> 
+	    <a href="/tables.html">
+		  <span class="icon-table"></span>  
           <span class="nav-label">Tables</span>
         </a>
       </li>
