--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,11 +17,12 @@ html {
   height: 100%;
   font-size: $base-font-size;
   -webkit-overflow-scrolling: touch;
-  -webkit-tap-highlight-color: $magnolia;
+  -webkit-tap-highlight-color: $link-color;
   @include vendorize(text-size-adjust, $base-font-size);
 }
 
 body {
+  width: 100%;
   background-color: transparent url('#{$imagePath}/tmp/grid.png');
   font-size: em($basefont);
   line-height: (27 / $basefont);
@@ -29,6 +30,7 @@ body {
   -webkit-font-smoothing: $font-smoothing;
   /* Fix for webkit rendering */
   @include vendorize(text-size-adjust, $base-font-size);
+  @include clearfix();
 }
 
 
@@ -53,44 +55,5 @@ pre,table,fieldset,hr {
   position: relative;
   width: 100%;
 }
-
-
-// declare non-grid-related styles for your elements ============================================= /
-section div {
-  padding: ($base-unit * 3) 0;
-}
-
-.hero {
-  height: $vertical-measure * 10;
-  background-color: $black-60;
-}
-
-
-/* Horizontal Rules
---------------------------------------------------*/
-
-hr {
-  border: solid #ddd;
-  border-width: 1px 0 0;
-  clear: both;
-  margin: .625em 0 1.875em;
-  height: 0;
-}
-
-/* Links
---------------------------------------------------*/
-
-a {
-  color: $black-70;
-  text-decoration: none;
-  outline: 0;
-  &:visited {
-    color: $black-70;
-    text-decoration: underline;
-    outline: 0;
-  }
-  @include hoverActiveFocus(color, $link-color-hover);
-}
-
 
 
