--- a/sass/wirefy.scss
+++ b/sass/wirefy.scss
@@ -31,6 +31,7 @@ MIT License
 /* Helpers - Added value to each file. (Optional) 
 ========================================================================== */
 
+@import 'helpers/_ie-support.scss';
 @import 'helpers/_color-palette.scss';
 @import 'helpers/_font-awesome.scss';
 @import 'helpers/_render-gradients.scss';
